--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,12 @@
   ga('create', 'UA-131557404-1', 'auto');// add your tracking ID here.
   // ga('send', 'pageview');
   </script>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-5473405068971104",
+      enable_page_level_ads: true
+    });
+  </script>
 </body>
 </html>
